--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "sass": "^1.83.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
