--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
     "next": "15.1.6",
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "embla-carousel-react": "8.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "cz-conventional-changelog": "^3.3.0",
-    "embla-carousel-react": "8.5.2",
-		"embla-carousel": "8.5.2",
+    "embla-carousel": "8.5.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
