--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "commit": "cz"
   },
   "dependencies": {
+    "embla-carousel-react": "8.5.2",
     "next": "15.1.6",
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "embla-carousel-react": "8.5.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,13 +25,10 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "prettier": "^3.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.83.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
